# synthcore

./: CMakeLists.txt
.github/workflows/: ci.yaml
ci/: build_c.ps1  build_linux.sh
include/synthcore/: at_scope_exit.hpp  block_delay_line.hpp  cells.hpp  channel_mixing.hpp  config.hpp  edge_trigger.hpp  fade_driver.hpp  faders.hpp  fast_sine_bank.hpp  filter_design.hpp  generation_thread.hpp  generic_timeline.hpp  iir_filter.hpp  interpolated_random_sequence.hpp  math.hpp  mod_pointer.hpp  mpsc_ring.hpp  noise_generator.hpp  prime_helpers.hpp  random_generator.hpp  small_vec.hpp  spsc_ring.hpp  three_band_eq.hpp  trylock.hpp  types.hpp  vbool.hpp  vector_helpers.hpp  xoshiro.hpp
include/synthcore/data/: arrays.hpp
src/: check_all_headers.cpp
src/data/: primes.cpp
tests/: block_delay_line.cpp  generation_thread.cpp  latch.cpp  math.cpp  mod_pointer.cpp  random_float.cpp
